# -*- mode: python -*-
# vi: set ft=python :

load("@ros2//:ament_index.bzl", "ament_index_share_files")
load("@ros2//:ros_cc.bzl", "ros_cc_binary")
load("@ros2//:ros_py.bzl", "ros_py_binary")
load("@ros2//:ros_py.bzl", "ros_py_test")

ament_index_share_files(
    name = "hydroelastic_share",
    package_name = "drake_ros_examples",
    srcs = [":hydroelastic.sdf"],
    strip_prefix = "examples/",
)

ros_cc_binary(
    name = "hydroelastic",
    srcs = ["hydroelastic.cc"],
    data = [
        ":hydroelastic_share",
    ],
    local_defines = ["BAZEL"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@drake//common:find_resource",
        "@drake//geometry:meshcat",
        "@drake//geometry:meshcat_visualizer",
        "@drake//lcmtypes:contact_results_for_viz",
        "@drake//multibody/meshcat",
        "@drake//multibody/parsing:parser",
        "@drake//multibody/plant",
        "@drake//multibody/plant:contact_results_to_lcm",
        "@drake//systems/analysis:simulator",
        "@drake//systems/analysis:simulator_config_functions",
        "@drake//systems/framework:diagram_builder",
        "@drake//systems/primitives:constant_vector_source",
        "@drake//visualization:visualization_config",
        "@drake//visualization:visualization_config_functions",
        "@drake_ros_repo//:drake_ros",
        "@gflags",
    ],
)

ament_index_share_files(
    name = "xxx_foo_share",
    package_name = "foo",
    srcs = [":foo.txt"],
    strip_prefix = "examples/hydroelastic/",
)

ament_index_share_files(
    name = "xxx_foo_again_share",
    package_name = "foo",  # Same package name as before
    srcs = [":foo_again.txt"],
    strip_prefix = "examples/hydroelastic/",
)

ament_index_share_files(
    name = "xxx_foo_new_prefix_share",
    package_name = "foo",  # Same package name as before
    srcs = [":foo_again.txt"],
    prefix = "unique_index",
    strip_prefix = "examples/hydroelastic/",
)

ament_index_share_files(
    name = "xxx_bar_share",
    package_name = "bar",
    srcs = [":bar.txt"],
    strip_prefix = "examples/hydroelastic/",
)

ros_cc_binary(
    name = "xxx_dep_two_packages",
    srcs = ["xxx_dep_two_packages.cc"],
    data = [
        ":xxx_foo_share",
        ":xxx_bar_share",
    ],
    deps = [
        "@ros2//:ament_index_cpp_cc",
    ]
)

ros_cc_binary(
    name = "xxx_same_package_twice",
    srcs = ["xxx_same_package_twice.cc"],
    data = [
        ":xxx_foo_share",
        ":xxx_foo_again_share",
    ],
    deps = [
        "@ros2//:ament_index_cpp_cc",
    ]
)

ros_cc_binary(
    name = "xxx_same_package_twice_unique_prefix",
    srcs = ["xxx_same_package_twice.cc"],
    data = [
        ":xxx_foo_share",
        ":xxx_foo_new_prefix_share",
    ],
    deps = [
        "@ros2//:ament_index_cpp_cc",
    ]
)

# TODO(sloretz) Add Python example

ros_py_test(
    name = "hydroelastic_test",
    srcs = ["test/hydroelastic_test.py"],
    data = [
        ":hydroelastic",
    ],
    main = "test/hydroelastic_test.py",
    deps = [
        "//:bazel_ros_testing_py",
    ],
)
